--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "devkit-cli"
-version = "0.1.0"
+version = "0.2.0"
 description = "Lightweight CLI tool to bootstrap AI coding agent templates for your projects"
 requires-python = ">=3.11"
 dependencies = [
@@ -19,8 +19,8 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/devkit_cli"]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
 ]
